--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
             <label>
-                <input type="radio"> Indoor
+                <input type="radio" id="indoor"> Indoor
             </label>    
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
