Step 47 Create another radio button below the first one. Nest it inside a label element with Outdoor as the label text. Give the radio button an id attribute with outdoor as the value.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <form action="https://freecatphotoapp.com/submit-cat-photo">
             <label>
                 <input type="radio" id="indoor"> Indoor
+            </label>
+            <label>
+                <input type="radio" id="outdoor"> Outdoor
             </label>    
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
