--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
             <label>
-                <input type="radio" id="indoor" name="indoor-outdoor"> Indoor
+                <input type="radio" id="indoor" value="indoor" name="indoor-outdoor"> Indoor
             </label>
             <label>
-                <input type="radio" id="outdoor" name="indoor-outdoor"> Outdoor
+                <input type="radio" id="outdoor" value="outdoor" name="indoor-outdoor"> Outdoor
             </label>    
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
