--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <section>
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
-            <label>
+            <fieldset>
+              <label>
                 <input type="radio" id="indoor" value="indoor" name="indoor-outdoor"> Indoor
-            </label>
-            <label>
+              </label>
+              <label>
                 <input type="radio" id="outdoor" value="outdoor" name="indoor-outdoor"> Outdoor
-            </label>    
+              </label>
+            </fieldset>      
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
         </form>
