--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
             <fieldset>
+              <legend>Is your cat an indoor or outdoor cat?</legend>
               <label>
                 <input type="radio" id="indoor" value="indoor" name="indoor-outdoor"> Indoor
               </label>
