Step 52 Next, you are going to add some new form input elements, so add another fieldset element directly below the current fieldset element.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               <label>
                 <input type="radio" id="outdoor" value="outdoor" name="indoor-outdoor"> Outdoor
               </label>
+            </fieldset>
+            <fieldset>
+                
             </fieldset>      
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
