--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </label>
             </fieldset>
             <fieldset>
-                
+              <legend>What's your cat's personality?</legend>
             </fieldset>      
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
