--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </fieldset>
             <fieldset>
               <legend>What's your cat's personality?</legend>
-              <input type="checkbox" id="loving"> Loving
+              <input type="checkbox" id="loving"> <label for="loving">Loving</label>
             </fieldset>      
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
