--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </fieldset>
             <fieldset>
               <legend>What's your cat's personality?</legend>
-              <input type="checkbox" id="loving" name="personality"> <label for="loving">Loving</label>
-              <input type="checkbox" id="lazy" name="personality"> <label for="lazy">Lazy</label>
-              <input type="checkbox" id="energetic" name="personality"> <label for="energetic">Energetic</label>
+              <input type="checkbox" id="loving" value="loving" name="personality"> <label for="loving">Loving</label>
+              <input type="checkbox" id="lazy" value="lazy" name="personality"> <label for="lazy">Lazy</label>
+              <input type="checkbox" id="energetic" value="energetic" name="personality"> <label for="energetic">Energetic</label>
             </fieldset>      
             <input type="text" name="catphotourl" placeholder="cat photo url" required>
             <button type="submit">Submit</button>
