--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <fieldset>
               <legend>Is your cat an indoor or outdoor cat?</legend>
               <label>
-                <input type="radio" id="indoor" value="indoor" name="indoor-outdoor"> Indoor
+                <input type="radio" id="indoor" value="indoor" name="indoor-outdoor" checked> Indoor
               </label>
               <label>
                 <input type="radio" id="outdoor" value="outdoor" name="indoor-outdoor"> Outdoor
@@ -45,7 +45,7 @@
             </fieldset>
             <fieldset>
               <legend>What's your cat's personality?</legend>
-              <input type="checkbox" id="loving" value="loving" name="personality"> <label for="loving">Loving</label>
+              <input type="checkbox" id="loving" value="loving" name="personality" checked> <label for="loving">Loving</label>
               <input type="checkbox" id="lazy" value="lazy" name="personality"> <label for="lazy">Lazy</label>
               <input type="checkbox" id="energetic" value="energetic" name="personality"> <label for="energetic">Energetic</label>
             </fieldset>      
