--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <title>CatPhotoApp</title>
+   <meta charset="utf-8">
+   <title>CatPhotoApp</title>
  </head>
   <body>
     <main>
